--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     margin: 0%;
     padding: 0%;
 }
+.no-display{
+    display: none;
+}
 
 /* nav bar parent div */
 .parent-div{
@@ -81,4 +84,53 @@ body{
     font-family: "Hind Madurai", sans-serif;
     font-weight: 600;
     font-style: normal;
+}
+/* ====== Responsive Part For mobile ====== */
+@media screen and (max-width: 576px){
+
+    .parent-div{
+    display: none;
+    }
+    
+    .nav-banner-parent{
+    color: white;
+    background-image: linear-gradient(#013223,#006747,#013223);
+    width: 100%;
+    }
+    .Responsive-banner{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        gap: 20px;
+        padding: 10px;
+        margin-bottom: 25px;
+    }
+   
+    .nav-banner-parent p{
+        display: none;
+    }
+    .responsive-parent-div{
+        /* border: 2px solid red; */
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        max-width: 100vw;
+        margin: 5px;
+        gap: 3px;
+    }
+    .common{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        border: 2px solid #006747;
+        width: 100%;
+        height: 5vh;
+        color:#006747;
+        background-color:white;
+        font-family: "Hind Madurai", sans-serif;
+        font-weight: 600;
+        font-style: normal;
+        border-radius: 5px;
+    }
+
 }
