--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0%;
     padding: 0%;
+    background-color: #f3fffb;
 }
 .no-display{
     display: none;
@@ -85,6 +86,97 @@ body{
     font-weight: 600;
     font-style: normal;
 }
+/* ======Cards and History Part======*/
+/* Grid-part of the cards */
+      .card-container{
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(4, 420px);
+        grid-template-rows: repeat(3, fr);
+        gap: 30px;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+    .span-row{
+         grid-row: 1 / 4; 
+         grid-column: 4;   
+    }
+    /* This CSS attributes are for cards of the grid */
+    .margin-bottom{
+      margin-bottom: 0px;
+    }
+    .margin-top{
+      margin-top: 4px;
+    }
+
+    .cards-parent{
+      padding: 25px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      border-radius: 15px;
+      max-width: 420px;
+      background-color: white;
+    }
+    .card-img-icon{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-family: "Hind Madurai", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      color: rgb(128, 128, 128);
+      font-size: 1.5rem;
+    }
+    .card-img-bg{
+      background-color: #FFE3E2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      border-radius: 10px;
+    }
+    .card-title-dis{
+      font-family: "Hind Madurai", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+      font-size: 0.9rem;
+
+    }
+    .card-btn{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 10px;
+    }
+    .card-btn-common{
+      width: 50%;
+      height: 50px;
+      border: 1px solid rgb(202, 202, 202);
+      border-radius: 15px;
+      font-family: "Hind Madurai", sans-serif;
+      font-weight: 600;
+      font-style: normal;
+    }
+    .btn-right{
+      background-color:#00A63E ;
+      color: white;
+    }
+    /* history card */
+    .history-parent{
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      background-color: white;
+    }
+    .history-card{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px;
+      padding-top: 20px;
+      font-family: "Hind Madurai", sans-serif;
+      font-weight: 600;
+      font-style: normal;
+    }
 /* ====== Responsive Part For mobile ====== */
 @media screen and (max-width: 576px){
 
@@ -105,32 +197,78 @@ body{
         padding: 10px;
         margin-bottom: 25px;
     }
+    .on-display{
+           display: block;
+    }
+
+    .responsive-function-bar{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 420px;
+            margin: 0 auto;
+            padding: 0px;
+            margin-top: 15px;
+        }
+        .left-btn{
+            width: 25%;
+            height: 55px;
+            border-radius: 10px;
+        }
+        .call-his-service{
+            background-color: #00A63E;
+            color: white;
+            border:  0.3px solid #cfcfcf;
+            width: 110%;
+            height: 55px;
+            border-radius: 10px;
+            font-family: "Hind Madurai", sans-serif;
+            font-weight: 600;
+            font-style: normal;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.03);
+            padding: 5px;
+
+
+        }
+        .right-side{
+            border: 0.3px solid #cfcfcf;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            gap: 25px;
+            width: 240px;
+            padding-inline: 20px;
+            border-radius: 10px;
+            font-family: "Hind Madurai", sans-serif;
+            font-weight: 700;
+            font-style: normal;
+            color: #013223;
+            background-color: white;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+
+        }
+        .common{
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            gap: 5px;
+            
+        }
    
     .nav-banner-parent p{
         display: none;
     }
-    .responsive-parent-div{
-        /* border: 2px solid red; */
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        max-width: 100vw;
-        margin: 5px;
-        gap: 3px;
+    .card-container{
+       grid-template-columns: 1fr;
+       grid-template-rows: repeat(9, 1fr);
     }
-    .common{
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        border: 2px solid #006747;
-        width: 100%;
-        height: 5vh;
-        color:#006747;
-        background-color:white;
-        font-family: "Hind Madurai", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-        border-radius: 5px;
+    .cards-parent{
+      width: 350px;
+      margin: 0 auto;
     }
+    .history-parent{
+      display: none;
+    }
+    
 
 }
