--- a/style.css
+++ b/style.css
@@ -165,6 +165,11 @@ body{
       background-color:#00A63E ;
       color: white;
     }
+    .btn-right:hover{
+      background-color: white;
+      color: #00A63E;
+      border: 1px solid #00A63E;
+    }
     /* history card */
     .history-parent{
       border-radius: 15px;
