--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ body{
     margin: 0px;
 }
 .bold-font{
-  font-weight: 700;
+  font-weight: 600;
   font-style: normal;
-  font-size: 1.75rem;
+  font-size: 1.65rem;
 }
 .description-font{
   background-color: var(--gray-bg);
@@ -126,20 +126,22 @@ body{
 }
 .responsive-banner{ display: none; }
 /* ===> CSS: main-Grid <=== */
-/* .main-Grid{
+.main-Grid{
   display: grid;
-  grid-template-columns: repeat(4, 400px);
+  grid-template-columns: repeat(4, 410px);
   grid-template-rows: repeat(3, 1fr);
-  gap: 25px;
-  border: 2px solid red;
-  margin-top: 50px;
-  padding: 20px;
-
-} */
-
+  justify-content: center;
+  gap: 40px ;
+  margin-top: 90px;
+  margin-bottom: 40px;
+}
+.history-card{
+  grid-column: 4;
+  grid-row: 1 / 4;
+}
 /* cards css */
 .Cards-parent{
-  max-width: 370px;
+  max-width: 390px;
   padding: 20px;
   background-color: var(--white);
   border-radius: 20px;
@@ -171,6 +173,7 @@ body{
   justify-content: space-evenly;
   align-items: center;
   max-width:370px;
+  gap: 20px;
 }
 .cButton-common{
   border: 1px solid var(--gray-bg);
@@ -215,6 +218,16 @@ body{
     margin-top: 8px;
     padding-inline: 2px;
     gap: 5px;
-
-}
+    }
+    /* ======>Grid<====== */
+    .main-Grid{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, 1fr);
+    padding: 15px;
+    gap: 20px;
+   }
+   .history-card{
+    display: none;
+   }
 }
