--- a/style.css
+++ b/style.css
@@ -223,11 +223,12 @@ body{
     .main-Grid{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(9, 1fr);
+    grid-template-rows: repeat(10, 1fr);
     padding: 15px;
     gap: 20px;
    }
    .history-card{
+    grid-column: 1;
     display: none;
    }
 }
