Copy count is ready but past is not working

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body{
    align-items: center;
    padding: 10px;
    padding-inline: 40px;
+   background-color: var(--white);
 }
 .navbar-logo{
     display: flex;
@@ -62,6 +63,10 @@ body{
     justify-content: center;
     align-items: center;
     gap: 10px;
+    background-color: var(--bg);
+    border-radius: 25px;
+    width: 100px;
+    height: 50px;
 }
 .navbar-btn{
     border: 2px solid var(--primary-green);
